# rsonance

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  devenv.nix  flake.nix
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-03-31-code-quality-pass.md  2026-03-31-nix-flake-and-modules.md
docs/superpowers/specs/: 2026-03-31-code-quality-pass-design.md  2026-03-31-github-ci-cd-design.md  2026-03-31-nix-flake-and-modules-design.md
nix/: hm-module.nix  nixos-module.nix  options.nix  package.nix
src/: lib.rs  main.rs  receiver.rs  transmitter.rs
