[package]
name = "mike"
version = "0.1.0"
edition = "2024"

[lib]
name = "mike"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
cpal = "0.16.0"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "transmitter"
path = "src/bin/transmitter.rs"
