[package]
name = "rsonance"
version = "0.1.0"
edition = "2024"

[lib]
name = "rsonance"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
cpal = "0.16.0"
env_logger = "0.11.8"
log = "0.4.27"
signal-hook = "0.3.18"
tokio = { version = "1.47.1", features = ["full"] }

